# NullCarbon

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/certificate/: certificate.controller.ts  certificate.service.ts
backend/src/compliance/: compliance.controller.ts  (+2 more)
circuits/: Nargo.toml  Prover.toml  README.md
circuits/compliance_proof/: Nargo.toml  Prover.toml
circuits/retirement_proof/: Nargo.toml  Prover.toml
circuits/src/: compliance_proof.nr  retirement_proof.nr  vintage_proof.nr
circuits/utils/: Nargo.toml
circuits/vintage_proof/: Nargo.toml  Prover.toml
contracts/: Cargo.toml  README.md
contracts/credit_registry/: Cargo.toml
contracts/nullifier_registry/: Cargo.toml
contracts/retirement_verifier/: Cargo.toml
contracts/retirement_verifier/src/: lib.rs
contracts/retirement_verifier/test_snapshots/tests/: test_duplicate_nullifier_rejected.1.json  test_empty_proof_rejected_in_test_mode.1.json  test_valid_proof_accepted.1.json
contracts/scripts/: deploy.sh  invoke.sh
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
indexer/: package-lock.json  package.json
indexer/src/: index.ts
scripts/: build-merkle.sh  fund-testnet.sh  setup.sh  sync-registry.sh  test-e2e.sh
(+52 files in other folders)
