[package]
name = "retirement_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21" }
nullifier_registry = { path = "../nullifier_registry" }
credit_registry = { path = "../credit_registry" }

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }
nullifier_registry = { path = "../nullifier_registry", features = ["testutils"] }
credit_registry = { path = "../credit_registry", features = ["testutils"] }
